.metadata/.plugins/org.eclipse.cdt.ui/global-build.log

**** Build of configuration Debug for project 04.numbers ****

Nothing to build for project 04.numbers
17:35:41 **** Incremental Build of configuration Debug for project blink ****
make -j9 all 
make: Nothing to be done for `all'.
17:36:07 **** Incremental Build of configuration Debug for project blink ****
make -j9 all 
make: Nothing to be done for `all'.
17:36:30 **** Incremental Build of configuration Debug for project blink ****
make -j9 all 
make: Nothing to be done for `all'.
17:42:42 **** Incremental Build of configuration Debug for project 04.numbers ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 04.numbers
Invoking: MacOS X C Linker
gcc  -o "04.numbers"  ./main.o   
Finished building target: 04.numbers
 
17:43:05 **** Incremental Build of configuration Debug for project 04.numbers ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 04.numbers
Invoking: MacOS X C Linker
gcc  -o "04.numbers"  ./main.o   
Finished building target: 04.numbers
 
19:44:48 **** Clean-only build of configuration Debug for project 04.numbers ****
make clean 
rm -rf  ./main.o  ./main.d  04.numbers
 
19:44:48 **** Build of configuration Debug for project 04.numbers ****
make all 
Building file: ../src/04.numbers.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/04.numbers.d" -MT"src/04.numbers.o" -o "src/04.numbers.o" "../src/04.numbers.c"
../src/04.numbers.c:10:7: error: expected expression
return
      ^
../src/04.numbers.c:10:7: error: expected '}'
../src/04.numbers.c:3:1: note: to match this '{'
{
^
2 errors generated.
make: *** [src/04.numbers.o] Error 1
